www/Themes/Generic-theme/style.css
/* ... */
#tab1   {display:block;float:left;z-index:1;}


#validForm input    {font-size:11px;font-weight:400;margin-top:5px;}
#validForm  {
    padding:10px;
    text-align:center;
}
#validFormTop {
    float: right;
}


/* ToolBar */
.cachediv           {display:none;}
.consol_button {
    float:left;
}
.consol_button img {
    width: 20px;
    height: 20px;
    vertical-align: middle;
}
.ToolbarTable {
    margin: 6px 0px;
}
.ToolbarTR          {padding-left:10px;}
.ToolbarTR td:first-child {
    width: 50%;
}
.ToolbarTR a.btc { display: inline-block; height: 28px; line-height: 31px; padding: 0 10px; }

.Toolbar_TDSelectAction_Top {
    border: 1px solid var(--toolbar-td-select-top-action-border-color);
    border-radius: 4px;
    padding: 3px 2px;
    margin-left: 6px;
    overflow: hidden;
    float: left;
}

input[type="checkbox"],a.infobulle:hover table {
    border:1px var(--checkbox-anchor-info-bulle-hover-table-border-color) solid;
}
td, a.infobulle:hover td {
    padding:0px;
}

#menu_3 a,#footer a,#logli a,#logOut a {color:var(--menu-3-logout-anchor-font-color);}

#Tcontener,#Tmainpage,#tabLegend,div.tab,.Tmenu3 .center,.ListTable {width:100%;}

.ListTable {

}

#Tmainpage {
    vertical-align: top;
}

.Small,.pagination,.ListColPicker,.ListColFooterCenter,.ListColCenter,.ListCol1,#page a,#page {text-align:center;}

.img_volante {
    background-color: var(--image-volante-background-color);
    display: none;
    position: fixed;
    z-index: 500;
    width: 600px;
    padding: 3px;
    border-radius: 4px;
    border: 1px solid var(--image-volante-border-color);
}

.popup_volante {
    background-color: var(--popup-volante-background-color);
    display: none;
    position:fixed;
    z-index:500;
    border-radius: 4px;
    border: 1px solid var(--popup-volante-border-color);
    font-weight:normal;
    text-align:justify;
}

#validForm label {padding:2px 4px;}

.FormFooter,.ListColFooter5,.ListColFooter5 a,.ListColFooterCenter,.ListColFooterLeft,.ListColFooterRight   {font-size:12px;font-weight:700;padding-right:10px;}
.ListColFooterRight,.ListColRight,.Toolbar_pagelimit {text-align:right;}
.Toolbar_pagelimit select {
    float: right;
}
.list_one,.list_two,.list_three,.list_four,.line_ack,.line_downtime,.list_unreachable,.row_disabled     {
    font-weight:400;
    vertical-align:middle;
}

div.ams     {text-align:center;font-style:italic;}

.helpTooltip {
    padding-right: 3px;
    vertical-align: middle;
}

.pull-left {
    float: left;
}

.pull-right {
    float: right;
}

ul.no-deco-list {
    list-style-type: none;
}

/* CLONE ELEMENT */
.clone_template .FormRowField,
.clone_template .FormRowValue {
    width: 208px;
}
.clonable {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.cloneremove {
    margin-top:-5px;
    cursor: pointer;
    float: right;
}
.clone-placeholder {
    border-color: var(--clone-placeholder-border-color);
    border-style: dashed;
    margin-top: 0px;
    margin-bottom: 10px;
    height:60px;
}
.clone-cell {
    padding-top:1px;
    padding-bottom:3px;
}

/* reporting 2015 */

form#FormPeriod input{
    /*padding : 2px 0;*/
}

form#FormPeriod input[type="submit"] {
    padding: 2px 6px;
    color: var(--form-period-submit-font-color);
    background: var(--form-period-submit-background-color);
    border: 1px solid var(--form-period-submit-border-color);
}
form#FormPeriod select{
    border : 1px solid var(--form-period-select-border-color);
}

table#reportingStateTable tr.list_one td,
table#reportingStateTable tr.list_two td,
table#reportingStateTable tr.list_lvl_2 td{
    padding : 5px;
}

table#reportingStateTable .ListColRight {
    text-align: center;
}

td.ListColHeaderLeft select {
    border : 1px solid var(--td-list-col-header-left-select-border-color);
}

span.state_badge {
    height: 14px;
    width: 14px;
    display: inline-block;
    margin-right: 3px;
    border-radius: 2px;
    padding: 0;
}

.info_msg {
    position: absolute;
    width: auto;
    height: auto;
    background: var(--info-message-background-color);
    top: 7em;
    left: 30em;
    padding: 3px 6px;
    font-size: 11px;
    color: var(--info-message-font-color);
    font-weight: bold;
    z-index: 1;
    border-radius: 2px;
    border: 1px solid var(--info-message-border-color);
}
.info_msg:before {
    content: "";
    position: absolute;
    top : -5px;
    left: 6px;
    width: 0;
    height: 0;
    border-left: 5px solid var(--info-message-before-border-left-color);
    border-right: 5px solid var(--info-message-before-border-right-color);
    border-bottom: 5px solid var(--info-message-before-border-bottom-color);
}

/* Style for popin */
.centreon-popin {
    position: absolute;
    z-index: 1065;
    background-color: var(--centreon-popin-background-color);
    padding: 1em 3em 1em 1em;
    border-radius: 4px;
    border: 1px solid var(--centreon-popin-border-color);
}

.popin-wrapper {
    position: relative;
}

.popin-wrapper .button_group_center {
    margin-bottom: 0 !important;
}

.popin-wrapper p {
    color: var(--popin-wrapper-font-color);
}

.popin-wrapper a.close {
    position: absolute;
    top: -0.3em;
    right: -2.3em;
}

.centreon-popin-overlay {
    opacity: 0.2;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: var(--centreon-popin-overlay-background-color);
    z-index: 1052;
}

.cboxIframe body {
    background: transparent !important;
}

#colorbox {
    outline: none;
}

#cboxContent {
    border-radius: 4px;
    border: 1px solid var(--cbox-content-border-color);
}

.colorbox-popin {
    padding: 1em;
}

#cboxClose {
    background: #fff url('../../img/icons/circle-cross.png') no-repeat 0 0 /100% !important ;
    top: -10px !important;
    height: 18px !important;
    width: 18px !important;
    right: -10px !important;
    border-radius: 10px;
    border-width: 0px;
}
/* ... */

